srcs/tester/base/vector/begin_end/log.txt
./base/vector/begin_end/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> myvector;
 ^
./base/vector/begin_end/patched.cpp:8:27: error: use of undeclared identifier 'myvector'
 for (int i=1; i<=5; i++) myvector.push_back(i);
                          ^
./base/vector/begin_end/patched.cpp:11:7: error: use of undeclared identifier 'ft'
 for (ft::vector<int>::iterator it = myvector.begin() ; it != myvector.end(); ++it)
      ^
./base/vector/begin_end/patched.cpp:11:38: error: use of undeclared identifier 'myvector'
 for (ft::vector<int>::iterator it = myvector.begin() ; it != myvector.end(); ++it)
                                     ^
./base/vector/begin_end/patched.cpp:11:63: error: use of undeclared identifier 'myvector'
 for (ft::vector<int>::iterator it = myvector.begin() ; it != myvector.end(); ++it)
                                                              ^
5 errors generated.
